OO-7934: view of several reviews